Creating authenticate user route
