# src/routes/Authenticate.routes.ts
@@ -1,0 +1,10 @@
+import { Router } from "express";
+import AuthenticateUserController from "../modules/accounts/controllers/AuthenticateUserController";
+
+const authenticateRoutes = Router();
+
+const authenticateUserController = new AuthenticateUserController();
+
+authenticateRoutes.post("/login", authenticateUserController.handle);
+
+export default authenticateRoutes;
